# src/main/java/com/group4/group4/dtos/PersonalidadePokemonDTO.java
@@ -1,0 +1,10 @@
+package com.group4.group4.dtos;
+
+public record PersonalidadePokemonDTO(
+    String[] sprites,
+    String name,
+    String frasePersonalidade
+
+) {
+
+}
